@@ -1,3 +1,6 @@
+2012-05-08
+ * channel coordinates
+
 2012-05-07
  * scheduler library
  * moved cupola to library file
